--- a/styles/site-plan.css
+++ b/styles/site-plan.css
@@ -100,12 +100,12 @@ p {
 }
 
 p.colored {
-  background-color: var(--paragraph-background-color);
-  color: var(--paragraph-color-on-color);
+  background-color: var(--primary-color);
+  color: var(--accent1-color)
 }
 
 nav {
-  background-color: var(--nav-background-color);
+  background-color: var(--primary-color);
   line-height: 3em;
   text-align: center;
   font-size: 1.2em;
@@ -123,11 +123,11 @@ nav a {
 
 }
 nav a:link, nav a:visited {
-  color: var(--nav-link-color);
+  color: var(--accent1-color);
 }
 nav a:hover {
-  color: var(--nav-hover-link-color);
-  background-color: var(--nav-hover-background-color);
+  color: var(--secondary-color);
+  background-color: var(--accent2-color);
 }
 
 .sitemap {
